src/objects/FS_Monthy_Planner__c.object
<CustomObject>
    <description>Monthly Planner will be used to track team’s performance in salesforce.</description>
    <fields>
        <fullName>FS_AmountOfNonWorkingDays__c</fullName>
        <description>Amount of non-working days (vacation, sick, etc)</description>
        <label>Amount Of Non-Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_CriticalAchiveToday__c</fullName>
        <description>critical % wich needed to achive today</description>
        <formula>FS_MinimumAchivetoday__c -0.10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Critical % Achive Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_EndDate__c</fullName>
        <description>Last day of Month</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_MinimumAchivetoday__c</fullName>
        <formula>FS_WorkingDaysPassed__c / FS_WorkingDays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Achive today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_PlanForDailyEvents__c</fullName>
        <description>Plan for daily events</description>
        <label>Plan For Daily Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_PlanForMonthlyEvents__c</fullName>
        <description>Plan for monthly events</description>
        <formula>FS_WorkingDays__c  *  FS_PlanForDailyEvents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan For Monthly Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Plan__c</fullName>
        <formula>(FS_WorkingDays__c  -  FS_AmountOfNonWorkingDays__c) *  FS_PlanForDailyEvents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_StartDate__c</fullName>
        <description>First day of month</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Monthly_Planner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_WorkingDaysPassed__c</fullName>
        <description>Amount of working days passed from month beginning</description>
        <formula>(
( FLOOR ( ( TODAY() - DATE (1900,01,01) ) / 7 ) *5 )
+ MIN ( 5, MOD ( TODAY() - DATE (1900,01,01), 7 ) +1 )
) -
(
( FLOOR ( ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE (1900,01,01) ) / 7 ) *5 )
+ MIN ( 5, MOD ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE (1900,01,01), 7 ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working Days Passed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_WorkingDays__c</fullName>
        <formula>CASE(MOD( FS_StartDate__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FS_EndDate__c - FS_StartDate__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FS_EndDate__c - FS_StartDate__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FS_EndDate__c - FS_StartDate__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FS_EndDate__c - FS_StartDate__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FS_EndDate__c - FS_StartDate__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FS_EndDate__c - FS_StartDate__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FS_EndDate__c - FS_StartDate__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FS_EndDate__c - FS_StartDate__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Of_Month__c</fullName>
        <formula>TODAY()-DAY(TODAY())+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Of Month</label>
        <type>Date</type>
    </fields>
    <label>Monthly Planner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Monthy Planner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Planner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>